--- a/ui/article1.html
+++ b/ui/article1.html
@@ -5,11 +5,21 @@
 ARticle one
 </title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<style >
+.container{
+	max-width: 800px;
+	margin: 0 auto;
+	color: grey;
+	font-family: sans-serif;
+
+}
+</style>
 </head>
 
 
 
 <body>
+	<div class="container">
 <a href="/"> home </a>
 
 <p>
@@ -18,6 +28,8 @@ first line
 
 <p>
 second line</p>
+
+	</div>
 
 </body>
 
