--- a/ui/article1.html
+++ b/ui/article1.html
@@ -5,15 +5,7 @@
 ARticle one
 </title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<style >
-.container{
-	max-width: 800px;
-	margin: 0 auto;
-	color: grey;
-	font-family: sans-serif;
-
-}
-</style>
+<link rel="stylesheet"  href="ui/style.css">
 </head>
 
 
