--- a/ui/index.html
+++ b/ui/index.html
@@ -4,13 +4,25 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img id="madi" src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! I am your webapp.
-        </div>
+        <div class="container">
+            <div class="center">
+                <img id="madi" src="https://scontent.fblr6-1.fna.fbcdn.net/v/t1.0-9/23472960_1715519635165136_2047903849772115358_n.jpg?oh=ce779db669126b4d1593a407a68e2b97&oe=5AF81673" class="img-medium"/>
+            </div>
+            <h3>Personal</h3>
+            <div>
+                Hi This is Prashant. 
+            </div>
+            <hr/>
+            <h3>Professional</h3>
+            <div >
+                Final year cse student
+            </div>
+            <hr/>
+            <div class="footer">
+                This button <button id="counter">Click me!</button> has been clicked <span id="count">0</span> times.
+            </div>
+        </div>  
+        
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
